Revert "Fix: Mis-aligned tooltips"
This reverts commit 600a7e62afb1564ea682a517efce3ab88825726f.

--- a/src/components/ui/_tooltip.scss
+++ b/src/components/ui/_tooltip.scss
@@ -6,7 +6,6 @@
     font-size: $fschat;
     font-weight: $fwui;
     line-height: $lh;
-    transform: translateY(-32px);
 }
 .tooltip::after{
     display: none;
